# bird-sql

./: .dockerignore  .gitignore  Dockerfile  README.md  modal_run.py  pyproject.toml  run.sh  sqlite3  vllm_llama_patched.py
arcwise/: ai_describe_table.py  ddl.py  embedding.py  evaluate_retrieval.py  generate_db_metadata.py  index_db_tables.py  llama_predict.py  prompts.py  typedefs.py  utils.py
arcwise/agent/: execute_sql.py  main.py  prompts.py  run_agent.py  search_text_column.py  utils.py
arcwise_evaluation/: agent_report_viewer.html  evaluate_retrieval.py  evaluate_schema_predict.py
bird_evaluation/: README.md
bird_evaluation/data/: dev_metadata.json  mini_dev_cleaned.json
bird_evaluation/src/: evaluate_agent_report.py
finetuning/: create_dataset.py  modal_unsloth_merge.py  modal_unsloth_mistral.py
mock_dataset/: mock_gold.sql  questions.json
mock_dataset/databases/superhero/database_description/: alignment.csv  attribute.csv  colour.csv  gender.csv  hero_attribute.csv  hero_power.csv  publisher.csv  race.csv  superhero.csv  superpower.csv
