[tool.poetry]
name = "bird-arcwise"
version = "0.0.0"
description = "BIRD-SQL submission"
authors = ["Arcwise Team <arcwise-team@arcwise.app>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
pydantic = "^2.8.2"
sqlglot = "^25.6.0"
litellm = "^1.41.23"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
click = "^8.1.7"
pandas = "1.5.3"
fastapi = "^0.111.0"
numpy = "^1.21.2"
aioboto3 = "^12.3.0"
func-timeout = "^4.3.5"
transformers = "^4.42.4"
tenacity = "^8.5.0"
duckdb = "^1.0.0"

[tool.ruff]
line-length = 100


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
